--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,11 @@ h1 {
     display: none;
 }
     .attribution a { color: hsl(228, 45%, 44%); }
+
+.darken:hover {
+    font-style: normal;
+    color:hsl(238, 29%, 16%);
+}
+.darken {
+    color:hsl(240, 6%, 50%);
+}
